<resources>
    <string name="app_name">桃花源</string>
    <string name="home_title">首页</string>
    <string name="mall_title">商城</string>
    <string name="my_title">我的</string>
    <string name="reflesh_title">刷新</string>

    <string name="empty_data_hint">暂无数据</string>
    <string name="register_progress_bar_title">注册中&#8230;</string>
    <string name="login_progress_bar_title">登录中&#8230;</string>
    <string name="empty_phone_msg">手机号不能为空</string>
    <string name="empty_password_msg">密码不能为空</string>
    <string name="empty_captcha_msg">验证码不能为空</string>
    <string name="register_success_msg">注册成功</string>
    <string name="login_success_msg">登录成功</string>
    <string name="empty_idcard_msg">身份证号码不能为空</string>
    <string name="service_contact_information">
        <![CDATA[联系客服：<a href="tel:1000231312">1000231312</a>]]>
    </string>
    <string name="edit_shopping_cart">编辑</string>
    <string name="delete_shopping_cart">删除</string>
    <string name="illegal_idcard_msg">不合法的身份证</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="empty_nickname_msg">昵称不能为空</string>
    <string name="revise_success_msg">修改成功</string>
    <string name="empty_value_msg">值不能为空</string>
    <string name="data_not_avoidable">未获取到有效数据</string>
    <string name="star_success_msg">收藏成功</string>
    <string name="common_question">

        <b>1）\t小布的商品都是正品吗？</b>\n
        答：本店产品均来自原产地，对产品有严格的工艺要求，产品质量符合法定的质量标准，
        产品包装、注册商标等符合国家有关规定。产品应严格按产品包装上注明的贮藏条件贮藏，因购货方对产品保管养护不善而造成产品质量问题由购货方负责。
        \n\n
        <b>2）\t小布用什么快递？</b>\n
        答：一般情况下，我们采用韵达、中通、顺丰等公司的快递，偏远地区可能使用EMS快递，暂不支自选快递。
         \n\n

        <b>3）我的包裹多长时间能送到？</b> \n
        答：我们会在订单支付成功后1-3天内发货（节假日顺延，部分定制或特殊商品7天内发货），送达时间以快递配送时间为准。

    </string>
    <string name="about_shop">
        <![CDATA[
        <font color="#ff0000">客户须知：</font><br/>
         <b><u>问：如何订购商品？</u></b><br/>
         答：您可以首先浏览我们本店的商品。看到您满意的商品您可以直接在我们本店订购。您也可以和我们本店的客服人员咨询订购。<br/>
         <b><u>问：你们的商品我都非常喜欢，已经购买了很多，但是有些怎么一直没货？会不会订不到？</u></b><br/>
         答：由于本店顾客购买需求比较大，您可以直接联系我们本店的客服进行预约订购。<br/>
         <b><u>问：所有的产品都能够在本店上购买?</u></b><br/>
         答：目前本店查找的都是可以订购的，但是必须是仓库中有库存的产品我们才可以与您确认。<br/>
             部分热销产品也可以通过我们本店的客服做一个预约，等到货品到后，我们会立即通过电话或者电子邮件的方式通知您来订购。<br/>
         <b><u>问：为什么要注册会员？</u></b><br/>
             1、\t只有注册用户才可以在本店进行订购，享受优惠的价格。<br/>
             2、\t只有注册用户才可以登录\"会员中心\"，使用更多的会员购物功能,管理自己的资料。<br/>
             3、\t只有注册用户才可以在网上给其他注册的朋友留言。<br/>
             4、\t只有注册用户才有可能获取我们赠送的礼品。<br/>
          <font color="#ff0000"><b>其他须知：</b></font><br/>
               1、\t您在接收到货物时，请您务必依据发货单及商品外包装信息认真检查所收货物与您订购的型号、数量是否一致。<br/>
                    若有质疑，可以及时和我们客服联系，我们会根据情况给予处理并承担由此而产生的运输费用，您不用支付任何费用，请您不必担心。 <br/>
               2、\t如果您当场签收，我们视同为您认可商品完整无缺。<br/>
               3、\t请您在收到货物时当场验货，如果发现货物在运输途中破损，您有权拒绝收货并要求配送人员或邮局出示书面证明，<br/>
                    然后将证明传真至我公司，待确认后，我们将重新发货。<br/>
               4、\t如果您当场签收有明显损坏迹象的外包装后再投诉货物有误或有损坏，恕我们不能受理。
            ]]>
    </string>
    <string name="about_app">
        <![CDATA[
            <b>小布的信息：</b><br/>
            \t联系电话：15817409998<br/>
            \t联系人：李小姐<br/>
            \t传真：<br/>
            \tQQ：<br/>
            \t公司地址：深圳市南山区高新科技园南区泰邦科技大厦509
        ]]>
    </string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="fetching_captcha">获取验证码</string>
    <string name="captcha_hint">请输入验证码</string>
    <string name="tel_hint">请输入手机号</string>
    <string name="loading">加载中&#8230;</string>
    <string name="success_modify_password_msg">修改密码成功</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_order_error">订单创建失败，请稍后重试！</string>
    <string name="praise_evaluation">好评</string>
    <string name="moderate_evaluation">中评</string>
    <string name="bad_evaluation">差评</string>
    <string name="anon_desc">你写的评价会以匿名的形式展现</string>
    <string name="evaluation_hint">宝贝满足你的期待吗？说说它的优点和美中不足的地方吧</string>
    <string name="payment_success">支付成功</string>
    <string name="check_the_order">查看订单</string>
    <string name="to_home">返回首页</string>
    <string name="payment_fail">支付失败</string>
    <string name="fetch_captcha">发送验证码</string>
    <string name="captcha_max_length">4</string>
    <string name="order_detail">订单详情</string>
    <string name="pending_payment">待付款</string>
    <string name="pending_delivery">待发货</string>
    <string name="pending_receiving">待收货</string>
    <string name="pending_evaluate">待评价</string>
    <string name="payment">付款</string>
    <string name="confirm_receive">确认收货</string>
    <string name="evaluate">评价</string>
    <string name="confirm_receive_success">确认收货成功</string>
    <string name="already_evaluate">已评价</string>
    <string name="publishing">发布中</string>
</resources>
