<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fixed_height"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/app_bar_title"
                android:text="@string/payment_success"
                android:textColor="@color/textColorPrimary"
                android:layout_centerInParent="true"
                android:scaleType="center"
                android:gravity="center"
                />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_payment_success_top"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="收货人："
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="zoro"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <TextView
            android:id="@+id/tv_contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="手机号"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            style="@style/TextAppearance.AppCompat.Medium"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="收货地址："
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <TextView
            android:id="@+id/tv_contact_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="付款金额："
            style="@style/TextAppearance.AppCompat.Medium"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¥ "
            android:textColor="@android:color/holo_red_dark"
            style="@style/TextAppearance.AppCompat.Medium"
            />

        <TextView
            android:id="@+id/tv_fact_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="32.00"
            android:textColor="@android:color/holo_red_dark"
            style="@style/TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:justifyContent="space_around"
        android:layout_marginTop="@dimen/fixed_height"
        >

        <Button
            android:id="@+id/btn_check_the_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_the_order"
            android:textColor="@color/orange_light_text_color_selector"
            android:background="@drawable/bg_orange_light_selector"
            />

        <Button
            android:id="@+id/btn_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_home"
            android:textColor="@color/orange_light_text_color_selector"
            android:background="@drawable/bg_orange_light_selector"
            />
    </com.google.android.flexbox.FlexboxLayout>


</LinearLayout>